--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,10 @@
      "files.associations": {
         "*.template": "yaml",
         "*.config": "yaml"
+    },
+    "files.exclude": {
+        "**/*.pyc": true,
+        "**/__pycache__": true,
+        "**/.ipynb_checkpoints": true
     }     
  }
