--- a/keras-deeplearning/train-model/train-model.template
+++ b/keras-deeplearning/train-model/train-model.template
@@ -2,7 +2,7 @@
 AWSTemplateFormatVersion: 2010-09-09
 Description: CloudFormation template for running Machine Learing workloads on EC2 Spot Instances.
 Mappings:
-  DeepLearningAmi:  # June 2017
+  DeepLearningAmi:  # 2.3_Jun2017
     ap-northeast-1:
       AMI: ami-b44050d3
     ap-northeast-2:
@@ -39,7 +39,7 @@ Parameters:
     Description: Optional - CIDR/IP range for instance ssh access - defaults to 0.0.0.0/0
     Type: String
   SpotBidPrice:
-    Default: 0.75
+    Default: 0.50
     Description: Spot Instance bid price
     Type: String
   GitRepo:
@@ -126,6 +126,10 @@ Resources:
         FromPort: 22
         IpProtocol: tcp
         ToPort: 22
+      - CidrIp: !Ref SourceCidr
+        FromPort: 8888
+        IpProtocol: tcp
+        ToPort: 8888
       VpcId: !Ref DeepLearningVPC
   SpotInstanceRole:
     Type: AWS::IAM::Role
@@ -141,13 +145,6 @@ Resources:
         Version: 2012-10-17
       Path: /
       Policies:
-      - PolicyDocument:
-          Statement:
-          - Action: cloudformation:DeleteStack
-            Effect: Allow
-            Resource: !Ref AWS::StackId
-          Version: 2012-10-17
-        PolicyName: DeleteDeepLearningStack
       - PolicyDocument:
           Statement:
           - Action:
@@ -294,9 +291,13 @@ Resources:
                 # Use /bin/bash instead of source so the script can use relative paths to its repo location
                 /bin/bash /tmp/repo/${RunScript}
 
-                logger "Beginning deletion of CloudFormation Stack ${AWS::StackId}"
-                aws cloudformation delete-stack --stack-name ${AWS::StackId} --region ${AWS::Region}
+                logger "Beginning termination of Spot instance in Stack ${AWS::StackId}"
 
+                # TODO: Any broadcast notifications needed here e.g. SQS, SNS, Lambda invocation
+                # Would need to update the instance role accordingly of course
+
+                # Clean-up
+                cancel-spot-fleet-requests --spot-fleet-request-ids ${SpotFleet} --terminate-instances
                 EOF
 
                 # we're now going to hand off to ec2-user, so allow access to certain files
@@ -306,6 +307,17 @@ Resources:
 
                 exec su -ls /bin/sh -c 'exec "$0" "$@" 2>&1 | tee /tmp/workload.log | logger' ec2-user -- /bin/bash /home/ec2-user/workload.sh
 
+  CancelFleetRequestPolicy:
+    Type: "AWS::IAM::Policy"
+    Properties: 
+      PolicyDocument:
+        Statement:
+        - Action: ec2:CancelSpotFleetRequests
+          Effect: Allow
+          Resource: !Ref SpotFleet
+        Version: 2012-10-17
+      PolicyName: CancelRequestPolicy
+      Roles: [!Ref SpotInstanceRole]
 Outputs:
   AwsRegionName:
     Description: The name of the AWS Region your template was launched in
