--- a/keras-deeplearning/train-model/train-model.template
+++ b/keras-deeplearning/train-model/train-model.template
@@ -219,12 +219,15 @@ Resources:
                 yum -y --security update
                 yum -y install jq
                 easy_install pip
-                pip install awscli
+                pip3 install awscli
                 aws configure set default.region ${AWS::Region}
                 echo "AWS CLI installed and configured" | tee /tmp/workload.log | logger
 
+                pip3 install matplotlib seaborn
+                echo "Seaborn installed" | tee /tmp/workload.log | logger
+
                 # Update Keras to 2.x
-                pip3 -q install 'keras==2.0.6' --force-reinstall
+                pip3 install 'keras==2.0.6' --force-reinstall
                 echo "Keras updated" | tee /tmp/workload.log | logger
 
                 cat <<EOF > /tmp/awslogs.conf
